# pixi-register

./: Cargo.toml  README.md  pixi.toml
src/: cli.rs  main.rs
src/cli/: add.rs  common.rs  get.rs  list.rs
