[package]
name = "pixi-register"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
miette = "7.6.0"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
